--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -34,60 +34,53 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # Only login to Docker Hub when pushing tags
+      - name: Log in to Docker Hub
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract version information
+        id: extract_versions
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          TAG=${GITHUB_REF#refs/tags/}
+          # Remove leading 'v' if present
+          TAG=${TAG#v}
+
+          # Extract Kamal and Infisical versions
+          KAMAL_VERSION=$(echo $TAG | cut -d'-' -f1)
+          INFISICAL_VERSION=$(echo $TAG | cut -d'-' -f2)
+
+          echo "tag=${TAG}" >> $GITHUB_OUTPUT
+
+          echo "Extracted versions - Kamal: ${KAMAL_VERSION}, Infisical: ${INFISICAL_VERSION}"
+
       - name: Determine Docker tags
         id: docker_tags
         run: |
-          if [[ $GITHUB_REF == refs/heads/main ]]; then
-            echo "tags=ghcr.io/${{ github.repository_owner }}/kamal-infisical:latest" >> $GITHUB_OUTPUT
-          elif [[ $GITHUB_REF == refs/tags/* ]]; then
-            echo "tags=ghcr.io/${{ github.repository_owner }}/kamal-infisical:latest,ghcr.io/${{ github.repository_owner }}/kamal-infisical:${{ github.ref_name }}" >> $GITHUB_OUTPUT
+          TAGS="ghcr.io/${{ github.repository_owner }}/kamal-infisical:latest"
+
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            REF_NAME="${{ github.ref_name }}"
+            # If tag starts with 'v', keep both original tag and tag without 'v'
+            CLEAN_TAG="${REF_NAME#v}"
+
+            TAGS="${TAGS},ghcr.io/${{ github.repository_owner }}/kamal-infisical:${REF_NAME}"
+
+            # Add Docker Hub tags
+            TAGS="${TAGS},${{ secrets.DOCKERHUB_USERNAME }}/kamal-infisical:${REF_NAME}"
+            TAGS="${TAGS},${{ secrets.DOCKERHUB_USERNAME }}/kamal-infisical:latest"
           fi
 
-      - name: Build and push Docker image to GHCR
+          echo "tags=${TAGS}" >> $GITHUB_OUTPUT
+
+      - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.docker_tags.outputs.tags }}
-
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: linux/amd64,linux/arm64
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push Docker image to Docker Hub
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/kamal-infisical:${{ github.ref_name }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/kamal-infisical:${{ github.ref_name }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/kamal-infisical:latest
